welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: type mismatch;
 found   : Boolean
 required: Int
nbB = estSurBiscuit();
                   ^RunFour:5: error: reassignment to val
nbB=nbB+1;
   ^