welcome.lessons.welcome.variables.RunFour.scala.code
var nbB = 0; 
nbB = estSurBiscuit();
for (nbB <- 0 to 4)
nbB=nbB+1;
{while (!estSurBiscuit())
	{avance();}
	}